# aisonobuoy-collector-raspberrypi

./: AUTHORS  ChangeLog  README.md  config.txt  install.sh  requirements.txt  setup.cfg  setup.py
archive/scripts/: requirements.txt
pibackbone/: __init__.py  __main__.py  definitions.json  main.py
scripts/cron.d/: pibackbone  pijuice
services/: .env  docker-compose-cell-sim7600g-h.yml  docker-compose-compass.yml  docker-compose-core.yml  docker-compose-daisy.yml  docker-compose-environment-sensor.yml  docker-compose-freespacer.yml  docker-compose-hifiberry-dac-plus-adc-pro.yml  docker-compose-pijuice.yml  docker-compose-s3-upload.yml  docker-compose-sense.yml  docker-compose-status-updater.yml
services/cell-sim7600g-h/: Dockerfile  start-modem.sh
services/compass/: Dockerfile  README.md  compass_app.py  requirements.txt  test_compass_app.py
services/daisy/: Dockerfile  ais_app.py  requirements.txt
services/environment-sensor/: BME280.py  Dockerfile  ICM20948.py  LTR390.py  SGP40.py  TSL2591.py  environment_app.py  requirements.txt
services/freespacer/: Dockerfile  freespacer_app.py  test_freespacer_app.py
services/hifiberry-dac-plus-adc-pro/: Dockerfile  record.sh
services/pijuice/: Dockerfile  pijuice_config.JSON  power_app.py  test_power_app.py
services/s3-upload/: Dockerfile  requirements.txt  s3_app.py
services/sense/: Dockerfile  requirements.txt  sense_app.py  test_sense_app.py
services/status-updater/: Dockerfile  hooks.py  requirements.txt  status_app.py  test_status_app.py
tests/: requirements.txt  test_pibackbone.py
